include/notcurses/notcurses.h

struct ncplane;   
struct ncvisual;  
typedef enum {
  NCALIGN_UNALIGNED,
  NCALIGN_LEFT,
  NCALIGN_CENTER,
  NCALIGN_RIGHT,
} ncalign_e;
typedef struct nccell {
  uint32_t gcluster;          
  uint8_t gcluster_backstop;  
  uint8_t width;              
  uint16_t stylemask;         
  uint64_t channels;          
} nccell;
static inline bool
nccell_wide_right_p(const nccell* c){
  return nccell_double_wide_p(c) && c->gcluster == 0;
}
API int ncplane_set_base(struct ncplane* n, const char* egc,
                         uint16_t stylemask, uint64_t channels);
API int ncplane_base(struct ncplane* n, nccell* c);
API void ncplane_yx(const struct ncplane* n, int* RESTRICT y, int* RESTRICT x)
  __attribute__ ((nonnull (1)));
API int ncplane_y(const struct ncplane* n) __attribute__ ((pure));
API int ncplane_x(const struct ncplane* n) __attribute__ ((pure));
API int ncplane_move_yx(struct ncplane* n, int y, int x);
API void ncplane_abs_yx(const struct ncplane* n, int* RESTRICT y, int* RESTRICT x)
  __attribute__ ((nonnull (1)));
API int ncplane_abs_y(const struct ncplane* n) __attribute__ ((pure));
API int ncplane_abs_x(const struct ncplane* n) __attribute__ ((pure));
API struct ncplane* ncplane_parent(struct ncplane* n)
  __attribute__ ((nonnull (1)));
API const struct ncplane* ncplane_parent_const(const struct ncplane* n)
  __attribute__ ((nonnull (1)));
API int ncplane_move_above(struct ncplane* RESTRICT n,
                           struct ncplane* RESTRICT above)
  __attribute__ ((nonnull (1)));
API int ncplane_move_below(struct ncplane* RESTRICT n,
                           struct ncplane* RESTRICT below)
  __attribute__ ((nonnull (1)));
__attribute__ ((nonnull (1)))
static inline void
ncplane_move_top(struct ncplane* n){
  ncplane_move_below(n, NULL);
}
__attribute__ ((nonnull (1)))
static inline void
ncplane_move_bottom(struct ncplane* n){
  ncplane_move_above(n, NULL);
}
API struct ncplane* ncplane_below(struct ncplane* n)
  __attribute__ ((nonnull (1)));
API struct ncplane* ncplane_above(struct ncplane* n)
  __attribute__ ((nonnull (1)));
API int ncplane_rotate_cw(struct ncplane* n)
  __attribute__ ((nonnull (1)));
API int ncplane_rotate_ccw(struct ncplane* n)
  __attribute__ ((nonnull (1)));
API char* ncplane_at_cursor(const struct ncplane* n, uint16_t* stylemask, uint64_t* channels)
  __attribute__ ((nonnull (1)));
API int ncplane_at_cursor_cell(struct ncplane* n, nccell* c)
  __attribute__ ((nonnull (1, 2)));
API char* ncplane_at_yx(const struct ncplane* n, int y, int x,
                        uint16_t* stylemask, uint64_t* channels)
  __attribute__ ((nonnull (1)));
API int ncplane_at_yx_cell(struct ncplane* n, int y, int x, nccell* c)
  __attribute__ ((nonnull (1, 4)));
API char* ncplane_contents(struct ncplane* n, int begy, int begx,
                           unsigned leny, unsigned lenx)
  __attribute__ ((nonnull (1)));
API void* ncplane_set_userptr(struct ncplane* n, void* opaque)
  __attribute__ ((nonnull (1)));
API void* ncplane_userptr(struct ncplane* n)
  __attribute__ ((nonnull (1)));
API void ncplane_center_abs(const struct ncplane* n, int* RESTRICT y,
                            int* RESTRICT x)
  __attribute__ ((nonnull (1)));
API int ncplane_cursor_move_yx(struct ncplane* n, int y, int x)
  __attribute__ ((nonnull (1)));
API void ncplane_home(struct ncplane* n)
  __attribute__ ((nonnull (1)));
API void ncplane_cursor_yx(const struct ncplane* n, unsigned* RESTRICT y, unsigned* RESTRICT x)
  __attribute__ ((nonnull (1)));
API uint64_t ncplane_channels(const struct ncplane* n)
  __attribute__ ((nonnull (1)));
API uint16_t ncplane_styles(const struct ncplane* n)
  __attribute__ ((nonnull (1)));
API int ncplane_putc_yx(struct ncplane* n, int y, int x, const nccell* c)
  __attribute__ ((nonnull (1, 4)));
static inline int
ncplane_putc(struct ncplane* n, const nccell* c){
  return ncplane_putc_yx(n, -1, -1, c);
}
API int ncplane_putchar_stained(struct ncplane* n, char c)
  __attribute__ ((nonnull (1)));
API int ncplane_putegc_yx(struct ncplane* n, int y, int x, const char* gclust,
                          size_t* sbytes)
  __attribute__ ((nonnull (1, 4)));
API int ncplane_putegc_stained(struct ncplane* n, const char* gclust, size_t* sbytes)
  __attribute__ ((nonnull (1, 2)));
API int ncplane_putwegc_stained(struct ncplane* n, const wchar_t* gclust, size_t* sbytes)
  __attribute__ ((nonnull (1, 2)));
static inline int
ncplane_putstr_yx(struct ncplane* n, int y, int x, const char* gclusters){
  int ret = 0;
  while(*gclusters){
    size_t wcs;
    int cols = ncplane_putegc_yx(n, y, x, gclusters, &wcs);
    if(cols < 0){
      return -ret;
    }
    if(wcs == 0){
      break;
    }
    y = -1;
    x = -1;
    gclusters += wcs;
    ret += cols;
  }
  return ret;
}
static inline int
ncplane_putstr_aligned(struct ncplane* n, int y, ncalign_e align, const char* s){
  int validbytes, validwidth;
  ncstrwidth(s, &validbytes, &validwidth);
  int xpos = ncplane_halign(n, align, validwidth);
  if(xpos < 0){
    xpos = 0;
  }
  return ncplane_putstr_yx(n, y, xpos, s);
}
static inline int
ncplane_putstr_stained(struct ncplane* n, const char* gclusters){
  int ret = 0;
  while(*gclusters){
    size_t wcs;
    int cols = ncplane_putegc_stained(n, gclusters, &wcs);
    if(cols < 0){
      return -ret;
    }
    if(wcs == 0){
      break;
    }
    gclusters += wcs;
    ret += cols;
  }
  return ret;
}
static inline int
ncplane_putnstr_yx(struct ncplane* n, int y, int x, size_t s, const char* gclusters){
  int ret = 0;
  size_t offset = 0;
  while(offset < s && gclusters[offset]){
    size_t wcs;
    int cols = ncplane_putegc_yx(n, y, x, gclusters + offset, &wcs);
    if(cols < 0){
      return -ret;
    }
    if(wcs == 0){
      break;
    }
    y = -1;
    x = -1;
    offset += wcs;
    ret += cols;
  }
  return ret;
}
API void ncplane_erase(struct ncplane* n)
  __attribute__ ((nonnull (1)));